# blacklight

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  user.env.example
platform/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.ollama.yml  pyproject.toml  requirements.txt  user.env.example
platform/docs/: architecture.md  create-your-own-workflow.md  cross-platform-ci.md  desktop-packaging.md  eval-methodology.md  failure-modes.md  langgraph-langchain.md  managed-agents.md  operational-cost-and-ownership.md  provider-configuration.md  release-notes.md  roadmap.md  sdk.md  tradeoffs.md  wiki-home-header.md
platform/docs/issues/: index.md  milestone-1.md  milestone-4.md  milestone-5.md  milestone-9.md
platform/docs/wiki/: HEADER_VARIATIONS.md  Home.md  SIDEBAR_VARIATIONS.md  _Sidebar.console.md  _Sidebar.map.md  _Sidebar.md  _Sidebar.minimal.md
platform/packaging/: app-shell.json
platform/src/blacklight/: __init__.py  api.py  cli.py  demo_seed.py  errors.py  eval_evidence.py  local_models.py  main.py  models.py  provider_readiness.py  review.py  session_history.py  (+1 more)
platform/tests/: test_agent_registry.py  test_api.py  test_cli.py  test_demo_seed.py  test_desktop_packaging.py  test_evals.py  test_guardrails.py  test_human_review_queue_example.py  test_local_models.py  test_prompt_registry.py  test_provider_configuration_smoke.py  test_provider_factory.py  test_provider_reliability.py  test_providers.py  test_public_safe_data.py  test_sdk.py  test_settings.py  test_tracing.py
platform/tools/: create_wiki_header.py
(+101 files in other folders)
