[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blacklight"
version = "0.1.0"
description = "Blacklight Studio platform package for provider routing, prompt versioning, evals, guardrails, and observability."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.13.4",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.139.0",
  "uvicorn>=0.51.0",
  "httpx>=0.28.1",
]
openai = [
  "openai>=2.44.0",
]
dev = [
  "build>=1.5.0",
  "pytest>=9.1.1",
  "ruff>=0.15.22",
  "twine>=6.2.0",
]

[project.scripts]
blacklight = "blacklight.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blacklight = [
  "agents/definitions/*.json",
  "prompts/templates/*.json",
  "evals/fixtures/*.jsonl",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
